# 365-birthdays

./: .env.example  .gitignore  README.md  birthday_sync.py  package-lock.json  pyproject.toml  requirements.txt
.github/: dependabot.yml  renovate.json
.github/workflows/: auto-close.yml  ruff.yml  sync.yml  test.yml
src/birthdays365/: __init__.py  auth.py  calendar.py  cli.py  config.py  contacts.py  sync.py
tests/: __init__.py  test_auth.py  test_calendar.py  test_cli.py  test_config.py  test_contacts.py  test_sync.py
